# better_launch

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  example1.py  example2.py  package.xml  requirements.txt  roscon2025.md  setup.py
.ci/: manifest.xml
.github/workflows/: run_test.yml
better_launch/: __init__.py  better_launch.py  concept.py  concept1.py  concept2.py  convenience.py  example.launch.py  example1.py  example2.py  gazebo.py  launcher.py  ros_adapter.py  ui.py  wrapper.py
better_launch/elements/: __init__.py  abstract_node.py  composer.py  foreign_node.py  group.py  lifecycle_manager.py  lifecycle_node.py  live_params_mixin.py  node.py  ros2_launch_wrapper.py
better_launch/ros/: handlers.py  logging.py  ros_adapter.py
better_launch/tui/: __init__.py  app.py  better_tui.py  choice_dialog.py  footer_menu.py  log_entry.py  node_menu.py  node_status.py  pyterm_app  pyterm_app.py  sidebar.py  textual_app.py  tui2.py
better_launch/ui/: __init__.py  app.py  log_handler.py  node_menu.py  node_search.py  node_status.py
better_launch/utils/: async_signal_manager.py  better_logging.py  color_logs.py  colors.py  gazebo.py  introspection.py  log_formatter.py  log_record_forwarder.py  ros_adapter.py  roslog_formatter.py  substitutions.py
better_ros_launch/: better_launch.py
docs/: Makefile  Readme.md  notes.txt
docs/benchmarks/: cprofile-bl.bash  cprofile-ros2.bash  memray-bl.bash  memray-ros2.bash  psutil_benchmark.py  psutil_plots.py  pyspy-bl-speedscope.bash  pyspy-bl.bash  pyspy-ros2-speedscope.bash  pyspy-ros2.bash
docs/benchmarks/results/cprofile/: bl.profile  ros2.profile
docs/benchmarks/results/memray/: memray-flamegraph-bl.html  memray-flamegraph-ros2.html
docs/benchmarks/results/psutil/: psutil_bl.csv  psutil_python.csv  psutil_ros2.csv
docs/benchmarks/results/pyspy/: pyspy-speedscope-bl.json  pyspy-speedscope-ros2.json  speedscope-bl.json
docs/source/: better_launch.ros.rst  better_launch.rst  better_launch.tui.rst  better_launch.utils.rst  better_launch_custom.rst  conf.py  index.rst  modules.rst
example/: example1.py
examples/: 01_basic_example.launch.py  01_basic_example.py  02_composition.py  02_ui.launch.py  02_ui.py  03_composition.launch.py  03_composition.py  04_lifecycle.launch.py  04_lifecycle.py  05_launch_arguments.launch.py  05_launch_arguments.py  05_ros2.py  06_includes.launch.py  06_includes.py  06_ros2.py  07_ros2_turtlesim.launch.py  07_ros2_turtlesim.py  08_better_turtlesim.launch.py  08_better_turtlesim.py  09_convenience.launch.py  10_gazebo.launch.py  11_performance.launch.py  example1.py  ros2_call_better_turtlesim.launch.py  ros2_performance.launch.py  ros2_turtlesim.launch.py  test.world
hooks/: bl_shell_completion.bash  bl_shell_completion.fish  bl_shell_completion.zsh
launch/: concept2.py
media/benchmark/: benchmark.py  bl.py  memray-bl.bash  memray-ros2.bash  plots.py  psutil_benchmark.py  trace.py
media/benchmark/launchfiles/: ros2_turtlesim.launch.py
media/benchmark/reports/: memray-flamegraph-ros2.html  ros2_profile.csv
media/benchmark/results/: psutil_bl.csv
media/benchmark/results/cpu/: better_turtlesim.pstats  ros2_turtlesim.pstats
media/benchmarks/: memray-bl.bash  memray-ros2.bash  psutil_benchmark.py  psutil_plots.py
media/benchmarks/launchfiles/: better_turtlesim.py
media/benchmarks/results/: psutil_bl.csv  psutil_ros2.csv
media/benchmarks/results/memory/: memray-flamegraph-bl.html
scripts/: bl
test/: test_launcher.py
tests/: test_launcher.py
