<?xml version="1.0"?>
<package format="2">
  <name>better_launch</name>
  <version>1.0.0</version>
  <description>
    A better replacement for the ROS2 launch system: intuitive, simple, memorable.
  </description>
  <maintainer email="nikolas.dahn@gmail.com">Nikolas Dahn</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <depend>ament_index_python</depend>
  <depend>rcl_interfaces</depend>
  <depend>lifecycle_msgs</depend>
  <depend>composition_interfaces</depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
